# DisenioBJAM

./: .gitignore  DiagramacionProjecto.alm  DiagramacionProjecto.mpp  DiagramacionProjecto2.mpp  Disenio_planverifyval.html  FMEA-AIAG-3rd-8.5x11-v1.xls  FMEA-AIAG-3rd-8.5x11-v2.xls  FMEA-AIAG-3rd-8.5x11-v3.xls  FMEA-AIAG-3rd-8.5x11-v4.xls  FMEA-AIAG-3rd-8.5x11-v5.xls  PuntosPorHItos.xlsx
Hito 1/: BaseHito1.docx  EspecificacionesBualo.docx  Plan validacion v2.docx  cosas ari.docx  ~$sas ari.docx  ~$seHito1.docx
Prototipo/json_testbench/: CMakeLists.txt  caliper_number.h  ethernet.c  ethernet.h  jsonGetter.c  jsonGetter.h  main.c  messageLayer.c  messageLayer.h  testBenchVars.c  testBenchVars.h
Prototipo/json_testbench/Comeca/Common/Inc/: BUFFER_SIZE.h  message.h
Prototipo/json_testbench/Comeca/DigimaticProtocol/Inc/: digimatic.h
Prototipo/json_testbench/Comeca/DigimaticProtocol/Src/: digimatic.c
Prototipo/json_testbench/Comeca/EthernetEvent/Inc/: ethernet.h
Prototipo/json_testbench/Comeca/EthernetEvent/Src/: ethernet.c
Prototipo/json_testbench/Comeca/Managers/Inc/: analogInDigitalOutManager.h  analogInManager.h  caliperManager.h  pieceCountManager.h
Prototipo/json_testbench/Comeca/Managers/Src/: analogInManager.c  caliperManager.c
Prototipo/json_testbench/Comeca/Messages/Receive/Inc/: jsonGetter.h
Prototipo/json_testbench/Comeca/Messages/Receive/Src/: jsonGetter.c
Prototipo/json_testbench/Src/: main.c
Prototipo/json_testbench/jsons/received/: analogIn.json  analogIn2.json  digitalOut1.json  digitalOut2.json  digitalOut3.json  digitalOut4.json
Prototipo/json_testbench/jsons/sent/: invalidAnalogIn.json  invalidCaliperMeasure.json  pieceCount.json  validAnalogIn.json  validInchCaliperMeasure.json  validMmCaliperMeasure.json
Prototipo/json_testbench/jsons/toSend/: incrementPieceCounter.json  sendAnalogInMeasure.json  sendCaliperMeasure.json  sendRetryAnalogIn.json  sendWarningMessage.json
Prototipo/json_testbench/managers/Inc/: analogInDigitalOutManager.h  analogInManager.h  caliperManager.h  digitalOutManager.h  pieceCountManager.h
Prototipo/json_testbench/managers/Src/: analogInDigitalOutManager.c  analogInManager.c  caliperManager.c  digitalOutManager.c  pieceCountManager.c
Prototipo/json_testbench/newjson/: digitalOut.json
Prototipo/json_testbench/testBenchUtils/Inc/: caliper_number.h  digimatic_measure_t.h  message.h  testBenchVars.h
Prototipo/json_testbench/testBenchUtils/Src/: testBenchVars.c
Prototipo/json_testbench/utils/Inc/: ethernet.h  jsonGetter.h  messageLayer.h
Prototipo/json_testbench/utils/Src/: ethernet.c  messageLayer.c
s/: build.xml
(+714 files in other folders)
